# software-engineering-ws15

./: .gitignore  CMakeLists.txt  Makefile  celsiustofahrenheitconverter.cpp  celsiustofahrenheitconverter.hpp  celsiustokelvinconverter.cpp  celsiustokelvinconverter.hpp  command.cpp  command.hpp  converterfactory.cpp  converterfactory.hpp  currencyconverter.cpp  currencyconverter.hpp  decorator.cpp  decorator.hpp  dollartoeuroconverter.cpp  dollartoeuroconverter.hpp  dollartopesoconverter.cpp  dollartopesoconverter.hpp  eurotopoundconverter.cpp  eurotopoundconverter.hpp  inversion.cpp  inversion.hpp  lengthConverter.cpp  lengthConverter.hpp  main.cpp  meterToYardConverter.cpp  meterToYardConverter.hpp  mileToKilometerConverter.cpp  mileToKilometerConverter.hpp  team.txt  temperatureconverter.cpp  temperatureconverter.hpp  tests.cpp  unitconverter.cpp  unitconverter.hpp
tinytest/: CMakeLists.txt  Makefile  tests.cpp  tinytest.h
